--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,7 @@
 
 body {
     background-color:var(--secondary-text-color); 
-    font-family: Roboto, sans-serif;
-   
-    
-    
+    font-family: Roboto, sans-serif;    
 }
 a{
     text-decoration: none;
@@ -25,9 +22,7 @@ a{
 
 
 ul{
-    list-style-type: none;
-    
-    
+    list-style-type: none;   
 }
 
 
@@ -71,11 +66,13 @@ ul{
     font-size: 16px;
     line-height: 1.6;
     text-align: center;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 <!-- Шапка сайта -->
 
-
+header{
+    width:1200px;
+}
 .upper-logo{
     font-family: Raleway, sans-serif;
     font-size: 26px;
@@ -226,30 +223,27 @@ address{
 
 
 
-
-.order-button{
-    background-color: var(--link-color);
+ button .order-button{
+   
     color: var(--secondary-text-color);
     font-family: inherit;
     font-size: 16px;
     line-height: 1.9;
    
-    margin: 0  ;
-    padding: 10px 32px;
+    margin:0;
+    padding:10px 32px;
     border-radius: 4px;
-    border: transparent;
-    min-width: 200px;
-
-
+    border:transparent;
+    min-width:200px;
+    background-color:var(--link-color);
 }
+
 .hero{
     letter-spacing: 0.06em;
 
     text-align: center;
-    margin: 0 auto;
+    padding:200px;
    
-
-    
     background-image: linear-gradient( to right, rgba(47, 48, 58, 0.8), rgba(255, 255, 255, 0.1)), url(../images/hero.jpg)  ;
  
     width: 1600px;
@@ -265,11 +259,11 @@ address{
     font-weight: 900;
     font-size: 44px;
     line-height: 1.4;
-    text-align: center;
     text-transform: uppercase;
     
-    margin: 0;
-    padding: 200px 452px 30px 452px;
+    width:696px;
+    margin: auto;
+    
 
     
 }
@@ -359,6 +353,8 @@ address{
     letter-spacing: 0.03em;
 
     margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
     text-align: center;
 
 
@@ -580,6 +576,9 @@ margin-bottom: 0;
     
     padding: 20px 20px ;
     outline:  1px solid var(--social-link-color);
+    width: 170px;
+    height: 90px;
+    text-align: center;
     
 }
 .companies-list :first-child{
