--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ margin-bottom: 0;
 .products-list:hover,
 .products-list:focus{
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-    border: border: 1px solid #EEEEEE;
+    border: 1px solid #EEEEEE;
 }
 
 .p{
