--- a/css/styles.css
+++ b/css/styles.css
@@ -249,9 +249,9 @@ button{
     letter-spacing: 0.06em;
 
     text-align: center;
-    padding:200px;
-   
-    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.8), rgba(255, 255, 255, 0.1)), url(../images/hero.jpg)  ;
+    padding-top:200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8),rgba(47, 48, 58, 0.8)), url(../images/hero.jpg)  ;
  
     width: 1600px;
     height: 600px;
@@ -289,7 +289,9 @@ button{
 
 }
 
-
+.advantages-list{
+    width: 270px;
+}
 
 .advantages-list:not(:last-child){
     margin-right: 30px;
@@ -320,6 +322,12 @@ button{
 
     margin: 0;
     padding: 10px 0 0 0;
+}
+
+.image{
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .image:hover,
@@ -395,8 +403,7 @@ button{
     
     line-height: 1.2;
 
-  display: flex;
-  width:270px;
+   display: flex;
    padding: 0;
 
 }
@@ -404,7 +411,7 @@ button{
 
 
 .cards {
-   width: 370px;
+   width: 270px;
    margin: 0 30px 0 0;
    padding: 0;
    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);;
@@ -454,6 +461,10 @@ button{
 
 .social-links{
     color:var(--social-link-color);
+    display: flex;
+    
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
     
 }
 .social-links:hover{
@@ -461,13 +472,22 @@ button{
     border-radius:50% ;
 }
 
-
+.social-link{
+    height: 44px;
+    width: 44px;
+    position: relative
+}
 .icon-social{
     fill:var(--accent-color);
     text-align: center;
     padding:12px 12px;
     width: 44px;
     height: 44px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .icon-social:hover{
@@ -517,7 +537,8 @@ margin-bottom: 0;
 
 .p{
     padding: 20px;
-   
+   width: 100%;
+   height: 100%;
 }
 
 
@@ -580,16 +601,24 @@ margin-bottom: 0;
 
 .section-companies{
     
-    padding: 20px 20px ;
+    
     outline:  1px solid var(--social-link-color);
     width: 170px;
     height: 90px;
-    text-align: center;
+    position: relative;
+
     
 }
 .companies-list :first-child{
     margin: 0;
 }
+.companies-link{
+    width: 170px;
+    height: 90px;
+    margin: 0;
+    padding: 0;
+}
+
 
 
 <!--Футер-->
@@ -650,6 +679,10 @@ footer{
 }
 .icon-logo{
     fill:var(--social-link-color);
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 
@@ -687,10 +720,7 @@ footer{
 
     
 
-.address:hover,
-.address:focus{
-    color: var(--link-color);
-}
+
 
 .address{
 
@@ -716,13 +746,11 @@ footer{
     width: 44px;
     height:44px;
 }
-.social-footer .social-links{
+
     
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
+   
     
-    
-}
+
 .social-footer .social-links:not(:last-child){
     margin-right: 10px;
 }
