--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ ul{
     text-align: center;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
-<!-- Шапка сайта -->
+/*  Шапка сайта */
 
 header{
     width:1200px;
@@ -218,7 +218,7 @@ address{
 }
 
 
-<!-- Герой -->
+/* Герой */
 
 
 
@@ -274,7 +274,7 @@ button{
 
     
 }
-<!--преимущества-->
+/* преимущества */
 
 
 
@@ -392,7 +392,7 @@ button{
         
     
     }
-    <!--Комманда-->
+    /* Комманда */
 
 
     ul .team-names{
@@ -578,7 +578,7 @@ margin-bottom: 0;
     color:var(--link-color);
 }
 
-<!--Клиенты-->
+/* Клиенты */
 
 
 .clients .companies-list{
@@ -623,7 +623,7 @@ margin-bottom: 0;
 
 
 
-<!--Футер-->
+/* Футер */
 footer{
     line-height: 2; 
     width: 1200px;
