--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ button{
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8),rgba(47, 48, 58, 0.8)), url(../images/hero.jpg)  ;
  
-    width: 1600px;
+    max-width: 1600px;
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
